--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vite-plugin-ruby": "^5.1.1"
   },
   "dependencies": {
-    "@hotwired/turbo-rails": "^8.0.12"
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo-rails": "^8.0.12",
+    "vite-plugin-stimulus-hmr": "^3.0.0"
   }
 }
