--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "strict": true,
-    "types": ["vite/client", "node"]
+    "types": ["vite/client"]
   },
   "include": [
     "app/frontend/**/*"
